--- a/android/local.properties
+++ b/android/local.properties
@@ -1,5 +1,5 @@
-sdk.dir=/Users/devops/Library/Android/sdk
-flutter.sdk=/Users/devops/flutter
+sdk.dir=C:\\Users\\Mironshoh\\AppData\\Local\\Android\\sdk
+flutter.sdk=C:\\flutter_sdk\\flutter
 flutter.buildMode=debug
 flutter.versionName=1.0.0
 flutter.versionCode=1
